<resources>
    <string name="app_name">ChatChat</string>
    <string name="label_signup">Sign up</string>
    <string name="btn_signup">Sign up</string>
    <string name="label_signin">Sign in</string>
    <string name="btn_signin">Sign in</string>
    <string name="edt_name">Enter name</string>
    <string name="edt_email">Enter email</string>
    <string name="edt_password">Enter password</string>
    <string name="edt_confirm_password">Confirm password</string>
    <string name="btn_login">Log in</string>
    <string name="edt_profile_name">Edit your name</string>
    <string name="btn_edt_proflie_name">Edit</string>
</resources>